kube/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-zero-deployment
  namespace: express-zero-ns
  labels:
    app: express-zero
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-zero
  template:
    metadata:
      labels:
        app: express-zero
    spec:
      containers:
      - name: express-zero
        image: arkki/express-zero:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: true
        #   runAsNonRoot: true
        livenessProbe:
          initialDelaySeconds: 3
          periodSeconds: 3
          httpGet:
            path: /health
            port: 3000
