kube/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-zero-service
  namespace: express-zero-ns
spec:
  selector:
    app: express-zero
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
