kube/2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-zero-ingress
  namespace: express-zero-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-zero-service
            port:
              number: 80
